--- a/LOLGruppenziehung/Gruppen.html
+++ b/LOLGruppenziehung/Gruppen.html
@@ -11,6 +11,7 @@
 <body>
   <img src="./23w-Gruppen.png">
 
+
   <div class="GruppeLeft">
     <span id="G1Team1" class="Gruppe1 Zeile1"></span>
     <span id="G1Team2" class="Gruppe1 Zeile2"></span>
@@ -36,6 +37,7 @@
   </div>
 
     <!-- JAVASCRIPT STUFF -->
+    <script src="./script.js"></script>
     <script src="./Updater.js"></script>
     <script src="./regex-operation.js"></script>
     <script>
