--- a/CS2/teams1.html
+++ b/CS2/teams1.html
@@ -177,7 +177,7 @@
         }
 
         const spreadsheetID = '1aaOCiJbSxX0Di1Teny1w5F7j37bd3_nQG_ZxCDJ59mg';
-        const worksheetName = 'teamh2h1output';
+        const worksheetName = 't1output';
         const apiKey = "AIzaSyCpf1Yn1B7b4P9W5sazp6EcfgDM0Ati2Zg";
         const updateInterval = 3000;
 
