--- a/CS2/teams2.html
+++ b/CS2/teams2.html
@@ -4,7 +4,7 @@
   <head>
 
     <title>CS Team Stats 2</title>
-    <link rel="stylesheet" href="./teams2.css">
+    <link rel="stylesheet" href="./teams.css">
 
 </head>
 
@@ -59,7 +59,7 @@
   <div class="maps" id="team2spieler5maps"></div>
 </div>
 
-<div class="SpielerStatsLeftGrid">
+<div class="AnimLeft SpielerStatsLeftGrid">
   <div id="team1spieler1kd"></div>
   <div id="team1spieler2kd"></div>
   <div id="team1spieler3kd"></div>
@@ -77,7 +77,7 @@
   <div id="team1spieler5kpr"></div>
 </div>
 
-<div class="SpielerStatsRightGrid">
+<div class="AnimRight SpielerStatsRightGrid">
   <div id="team2spieler1kd"></div>
   <div id="team2spieler2kd"></div>
   <div id="team2spieler3kd"></div>
@@ -93,12 +93,6 @@
   <div id="team2spieler3kpr"></div>
   <div id="team2spieler4kpr"></div>
   <div id="team2spieler5kpr"></div>
-</div>
-
-<div class="SpielerNamenOrange AnimRight">
-  <span class= "SpielerNamenOrangeLine" id="TeamOrangeSpielerin1Name"></span>
-  <span class= "SpielerNamenOrangeLine" id="TeamOrangeSpielerin2Name"></span>
-  <span class= "SpielerNamenOrangeLine" id="TeamOrangeSpielerin3Name"></span>
 </div>
 
     <!-- JAVASCRIPT STUFF -->
