RL Stats angepasst

--- a/RL/SpielerStats.html
+++ b/RL/SpielerStats.html
@@ -3,7 +3,7 @@
 
   <head>
 
-    <title>RL Team Stats</title>
+    <title>RL Spieler Stats</title>
     <link rel="stylesheet" href="./SpielerStats.css">
 
 </head>
