Updated Schriftart etc

--- a/CS2/teams1.html
+++ b/CS2/teams1.html
@@ -29,8 +29,8 @@
 <img src="./teamsbg.png">
 
 <div class="TeamLogoContainer"> 
-  <img class="AnimLeft" id="team1logo">
-  <img class="AnimRight" id="team2logo">
+  <img id="team1logo">
+  <img id="team2logo">
 </div>
 
 <div class="SpielerNamenLeftGrid">
@@ -59,7 +59,13 @@
   <div class="maps" id="team2spieler5maps"></div>
 </div>
 
-<div class="AnimLeft SpielerStatsLeftGrid">
+<div class="SpielerStatsTitleGrid">
+  <span>KD</span>
+  <span>ADR</span>
+  <span>KPR</span>
+</div>
+
+<div class="SpielerStatsLeftGrid">
   <div id="team1spieler1kd"></div>
   <div id="team1spieler2kd"></div>
   <div id="team1spieler3kd"></div>
@@ -77,7 +83,7 @@
   <div id="team1spieler5kpr"></div>
 </div>
 
-<div class="AnimRight SpielerStatsRightGrid">
+<div class="SpielerStatsRightGrid">
   <div id="team2spieler1kd"></div>
   <div id="team2spieler2kd"></div>
   <div id="team2spieler3kd"></div>
