neue font gepusht

--- a/RL/SpielerStats.html
+++ b/RL/SpielerStats.html
@@ -10,6 +10,9 @@
 
 <body style="background-color: rgba(0, 0, 0, 0); margin: 0px auto; overflow: hidden; ">
 
+<img class="AnimLeft" src="spielerstatslicons.png" id="SpielerStatslPNG">
+<img class="AnimRight" src="spielerstatsricons.png" id="SpielerStatsrPNG">
+
 <div class="AnimLeft">
   <div class="SpielerStatslBox"></div>
   <div class="SpielerStatslBoxKlein" id="SpielerStatslBoxKlein1"></div>
@@ -140,8 +143,6 @@
             "image": {
               'B8': 'TeamBlueLogoLink',
               'B16': 'TeamOrangeLogoLink',
-              'B52': 'SpielerStatslPNG',
-              'B53': 'SpielerStatsrPNG',
             }
         }
 
