--- a/CS2/teams2.html
+++ b/CS2/teams2.html
@@ -59,6 +59,12 @@
   <div class="maps" id="team2spieler5maps"></div>
 </div>
 
+<div class="SpielerStatsTitleGrid">
+  <span>KD</span>
+  <span>ADR</span>
+  <span>KPR</span>
+</div>
+
 <div class="AnimLeft SpielerStatsLeftGrid">
   <div id="team1spieler1kd"></div>
   <div id="team1spieler2kd"></div>
