--- a/CS2/TeamStats2.html
+++ b/CS2/TeamStats2.html
@@ -3,12 +3,16 @@
 
   <head>
 
-    <title>CS Team Stats 1</title>
-    <link rel="stylesheet" href="./teams.css">
+    <title>CS Team Stats 2</title>
+    <link rel="stylesheet" href="./TeamStats.css">
 
 </head>
 
 <body style="background-color: rgba(0, 0, 0, 0); margin: 0px auto; overflow: hidden; ">
+
+<img src="./Sponsoren.png" class="imgfs">
+
+<div id="bar"></div>
 
 <div class="SpielerBilderLeftGrid">
   <img id="team1spieler1bild"></img>
@@ -177,7 +181,7 @@
         }
 
         const spreadsheetID = '1aaOCiJbSxX0Di1Teny1w5F7j37bd3_nQG_ZxCDJ59mg';
-        const worksheetName = 't1output';
+        const worksheetName = 't2output';
         const apiKey = "AIzaSyCpf1Yn1B7b4P9W5sazp6EcfgDM0Ati2Zg";
         const updateInterval = 3000;
 
