--- a/CS2/TeamStats1.html
+++ b/CS2/TeamStats1.html
@@ -3,12 +3,16 @@
 
   <head>
 
-    <title>CS Team Stats 2</title>
-    <link rel="stylesheet" href="./teams.css">
+    <title>CS Team Stats 1</title>
+    <link rel="stylesheet" href="./TeamStats.css">
 
 </head>
 
 <body style="background-color: rgba(0, 0, 0, 0); margin: 0px auto; overflow: hidden; ">
+
+<img src="./Sponsoren.png" class="imgfs">
+
+<div id="bar"></div>
 
 <div class="SpielerBilderLeftGrid">
   <img id="team1spieler1bild"></img>
@@ -26,11 +30,11 @@
   <img id="team2spieler5bild"></img>
 </div>
 
-<img src="./teamsbg.png">
+<img src="./teamsbg.png" class="imgfs">
 
 <div class="TeamLogoContainer"> 
-  <img class="AnimLeft" id="team1logo">
-  <img class="AnimRight" id="team2logo">
+  <img id="team1logo">
+  <img id="team2logo">
 </div>
 
 <div class="SpielerNamenLeftGrid">
@@ -65,7 +69,7 @@
   <span>KPR</span>
 </div>
 
-<div class="AnimLeft SpielerStatsLeftGrid">
+<div class="SpielerStatsLeftGrid">
   <div id="team1spieler1kd"></div>
   <div id="team1spieler2kd"></div>
   <div id="team1spieler3kd"></div>
@@ -83,7 +87,7 @@
   <div id="team1spieler5kpr"></div>
 </div>
 
-<div class="AnimRight SpielerStatsRightGrid">
+<div class="SpielerStatsRightGrid">
   <div id="team2spieler1kd"></div>
   <div id="team2spieler2kd"></div>
   <div id="team2spieler3kd"></div>
@@ -177,7 +181,7 @@
         }
 
         const spreadsheetID = '1aaOCiJbSxX0Di1Teny1w5F7j37bd3_nQG_ZxCDJ59mg';
-        const worksheetName = 't2output';
+        const worksheetName = 't1output';
         const apiKey = "AIzaSyCpf1Yn1B7b4P9W5sazp6EcfgDM0Ati2Zg";
         const updateInterval = 3000;
 
