--- a/OW/Roster.html
+++ b/OW/Roster.html
@@ -9,57 +9,59 @@
 </head>
 
 <body style="background-color: rgba(0, 0, 0, 0); margin: 0px auto; overflow: hidden; ">
-
+<div class="Alles">
 <div class="TeamContainer">
     <div id="TeamName"></div>
     <img id="TeamLogo">
 </div>
 
 <div class="HeroesContainer">
-    <div class="HeroBox">
+    <div class="HeroBox Anim1">
         <img id="Spieler1Held">
     </div>
-    <div class="HeroBox">
+    <div class="HeroBox Anim2">
         <img id="Spieler2Held">
     </div>
-    <div class="HeroBox">
+    <div class="HeroBox Anim3">
         <img id="Spieler3Held">
     </div>
-    <div class="HeroBox">
+    <div class="HeroBox Anim4">
         <img id="Spieler4Held">
     </div>
-    <div class="HeroBox">
+    <div class="HeroBox Anim5">
         <img id="Spieler5Held">
     </div>
 </div>
 
 <div class="NamenContainer">
-    <div class="NamenBox">
+    <div class="NamenBox Anim1">
         <span id="Spieler1Name"></span>
     </div>
-    <div class="NamenBox">
+    <div class="NamenBox Anim2">
         <span id="Spieler2Name"></span>
     </div>
-    <div class="NamenBox">
+    <div class="NamenBox Anim3">
         <span id="Spieler3Name"></span>
     </div>
-    <div class="NamenBox">
+    <div class="NamenBox Anim4">
         <span id="Spieler4Name"></span>
     </div>
-    <div class="NamenBox">
+    <div class="NamenBox Anim5">
         <span id="Spieler5Name"></span>
     </div>
 </div>
 
 <div class="IconContainer">
-    <img id="Spieler1Rolle">
-    <img id="Spieler2Rolle">
-    <img id="Spieler3Rolle">
-    <img id="Spieler4Rolle">
-    <img id="Spieler5Rolle">
+    <img class="Anim1" id="Spieler1Rolle">
+    <img class="Anim2" id="Spieler2Rolle">
+    <img class="Anim3" id="Spieler3Rolle">
+    <img class="Anim4" id="Spieler4Rolle">
+    <img class="Anim5" id="Spieler5Rolle">
 </div>
 
 <img id="Spieler1Held">
+
+</div>
 
     <!-- JAVASCRIPT STUFF -->
     <script src="./Updater.js"></script>
