--- a/OW/Roster1.html
+++ b/OW/Roster1.html
@@ -92,7 +92,7 @@
         }
 
         const spreadsheetID = '14d9nxy7f5DH8j5pop-PH1D96ifHR6-1g_kWkSywyXk0';
-        const worksheetName = 'rosteroutput';
+        const worksheetName = 'roster1output';
         const apiKey = "AIzaSyCpf1Yn1B7b4P9W5sazp6EcfgDM0Ati2Zg";
         const updateInterval = 3000;
 
