--- a/CS2/TeamStats2.html
+++ b/CS2/TeamStats2.html
@@ -30,7 +30,7 @@
   <img id="team2spieler5bild"></img>
 </div>
 
-<img src="./teamsbg.png">
+<img src="./teamsbg.png" class="imgfs">
 
 <div class="TeamLogoContainer"> 
   <img id="team1logo">
