--- a/TFT/TabelleBig.html
+++ b/TFT/TabelleBig.html
@@ -23,35 +23,59 @@
     </div>
     <div class="tabelleSpalte">
       <div class="zeile">
-        <span id="Player1Name"></span>
+        <div class="playerInfo">
+          <span id="Player1Name"></span>
+          <span id="Player1Stadt"></span>
+        </div>
         <span id="Player1Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player2Name"></span>
+        <div class="playerInfo">
+          <span id="Player2Name"></span>
+          <span id="Player2Stadt"></span>
+        </div>
         <span id="Player2Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player3Name"></span>
+        <div class="playerInfo">
+          <span id="Player3Name"></span>
+          <span id="Player3Stadt"></span>
+        </div>
         <span id="Player3Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player4Name"></span>
+        <div class="playerInfo">
+          <span id="Player4Name"></span>
+          <span id="Player4Stadt"></span>
+        </div>
         <span id="Player4Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player5Name"></span>
+        <div class="playerInfo">
+          <span id="Player5Name"></span>
+          <span id="Player5Stadt"></span>
+        </div>
         <span id="Player5Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player6Name"></span>
+        <div class="playerInfo">
+          <span id="Player6Name"></span>
+          <span id="Player6Stadt"></span>
+        </div>
         <span id="Player6Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player7Name"></span>
+        <div class="playerInfo">
+          <span id="Player7Name"></span>
+          <span id="Player7Stadt"></span>
+        </div>
         <span id="Player7Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player8Name"></span>
+        <div class="playerInfo">
+          <span id="Player8Name"></span>
+          <span id="Player8Stadt"></span>
+        </div>
         <span id="Player8Score"></span>
       </div>
     </div>
@@ -67,39 +91,61 @@
     </div>
     <div class="tabelleSpalte">
       <div class="zeile">
-        <span id="Player9Name"></span>
+        <div class="playerInfo">
+          <span id="Player9Name"></span>
+          <span id="Player9Stadt"></span>
+        </div>
         <span id="Player9Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player10Name"></span>
+        <div class="playerInfo">
+          <span id="Player10Name"></span>
+          <span id="Player10Stadt"></span>
+        </div>
         <span id="Player10Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player11Name"></span>
+        <div class="playerInfo">
+          <span id="Player11Name"></span>
+          <span id="Player11Stadt"></span>
+        </div>
         <span id="Player11Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player12Name"></span>
+        <div class="playerInfo">
+          <span id="Player12Name"></span>
+          <span id="Player12Stadt"></span>
+        </div>
         <span id="Player12Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player13Name"></span>
+        <div class="playerInfo">
+          <span id="Player13Name"></span>
+          <span id="Player13Stadt"></span>
+        </div>
         <span id="Player13Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player14Name"></span>
+        <div class="playerInfo">
+          <span id="Player14Name"></span>
+          <span id="Player14Stadt"></span>
+        </div>
         <span id="Player14Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player15Name"></span>
+        <div class="playerInfo">
+          <span id="Player15Name"></span>
+          <span id="Player15Stadt"></span>
+        </div>
         <span id="Player15Score"></span>
       </div>
       <div class="zeile">
-        <span id="Player16Name"></span>
+        <div class="playerInfo">
+          <span id="Player16Name"></span>
+          <span id="Player16Stadt"></span>
+        </div>
         <span id="Player16Score"></span>
       </div>
-    </div>
-  </div>
 
     <!-- JAVASCRIPT STUFF -->
     <script src="../Updater.js"></script>
@@ -138,7 +184,24 @@
               'B13': 'Player13Score',
               'B14': 'Player14Score',
               'B15': 'Player15Score',
-              'B16': 'Player16Score'
+              'B16': 'Player16Score',
+              'C1': 'Player1Stadt',
+              'C2': 'Player2Stadt',
+              'C3': 'Player3Stadt',
+              'C4': 'Player4Stadt',
+              'C5': 'Player5Stadt',
+              'C6': 'Player6Stadt',
+              'C7': 'Player7Stadt',
+              'C8': 'Player8Stadt',
+              'C9': 'Player9Stadt',
+              'C10': 'Player10Stadt',
+              'C11': 'Player11Stadt',
+              'C12': 'Player12Stadt',
+              'C13': 'Player13Stadt',
+              'C14': 'Player14Stadt',
+              'C15': 'Player15Stadt',
+              'C16': 'Player16Stadt'
+
             }
         }
 
