--- a/TFT/TabelleBig.html
+++ b/TFT/TabelleBig.html
@@ -3,7 +3,7 @@
 
   <head>
 
-    <title>RL Spieler Stats</title>
+    <title>TFT Tabelle Liga 1</title>
     <link rel="stylesheet" href="./TabelleBig.css">
 
 </head>
@@ -205,8 +205,8 @@
             }
         }
 
-        const spreadsheetID = '1-aREszKliFKYch2dpWvTi0PIiXSzMm3KgVOSXBIvfas';
-        const worksheetName = 'Standings';
+        const spreadsheetID = '1kmYdavgCrCTOYUJmgD2Kee6-srZMbYys280_GJXzLDM';
+        const worksheetName = 'Liga1';
         const apiKey = "AIzaSyCpf1Yn1B7b4P9W5sazp6EcfgDM0Ati2Zg";
         const updateInterval = 3000;
 
