--- a/VAL/Gruppenziehung/Gruppenziehung.html
+++ b/VAL/Gruppenziehung/Gruppenziehung.html
@@ -197,6 +197,8 @@
           A16: "Team16Name",
           A17: "Team17Name",
           A18: "Team18Name",
+          A19: "Team19Name",
+          A20: "Team20Name",
           B1: "Team1Stadt",
           B2: "Team2Stadt",
           B3: "Team3Stadt",
